--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -5,27 +5,56 @@
   background-color: #1c1c1e; 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-top: 60px;
+  align-items:start;
+  padding-top: 70px;
   position: fixed;
   top: 0;
   left: 0;
-  gap: 10px;
+  gap: 12px;
   box-shadow: 2px 0 12px rgba(0, 0, 0, 0.3);
 }
-
 .sidebar-link {
+  display: flex;
+  align-items:start;
   color: #f5f5f5;
+  padding:8px;
   font-size: 16px;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: -16px;
   width: 100%;
-  text-align: center;
+  gap:10px;
 }
 .sidebar-link:hover {
   background-color: rgb(92, 92, 244);
 }
+.sidebar-icon {
+  font-size: 1rem;
+  flex-shrink: 0;
+  margin-top:4px;
+}
 
+.sidebar-submenu {
+  margin-left: 20px;
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+.sidebar-sublink {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+  font-size: 0.95rem;
+  text-decoration: none;
+  color: #888;
+  transition: color 0.2s, background 0.2s;
+  width: 100%;
+}
+
+.sidebar-sublink:hover {
+  color: #000;
+  background-color: #f0f0f0;
+}
 /* Topnav */
 .topnav {
   height: 50px;
@@ -47,7 +76,7 @@
 .nav-links {
   display: flex;
   gap: 15px;
-  margin-left: -35%;
+  margin-left: -30%;
 }
 
 .nav-links a {
@@ -69,26 +98,25 @@
 }
 
 .datetime {
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 700;
   white-space: nowrap;
 }
 
 .datetime .day {
-  color: #bfa181;
+  color:green;
 }
 
 .datetime .date {
-  color: #b6ccb6;
+  color:red;
 }
 
 .datetime .time {
-  color: #d6a67a;
+  color: blue; 
 }
-
 .user-icon {
   color: #f5f5f5;
-  font-size: 28px;
+  font-size: 30px;
   background: #3a3a3d;
   padding: 6px;
   border-radius: 50%;
