--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -8,7 +8,7 @@
   align-items:start;
   padding-top: 70px;
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   gap: 12px;
   box-shadow: 2px 0 12px rgba(0, 0, 0, 0.3);
@@ -53,7 +53,7 @@
 
 .sidebar-sublink:hover {
   color: #000;
-  background-color: #f0f0f0;
+  background-color:rgb(92, 92, 244);
 }
 /* Topnav */
 .topnav {
