--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,20 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.layout {
+  display: flex;
+  min-height: 100vh;
+}
+
+.sidebar {
+  width: 150px;
+  background-color: #1e293b;
+  color: white;
+  padding: 16px;
+  top:50px;
+}
+
+main {
+  flex: 1;
+  padding: 24px;
+}
