--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,10 @@
-@import "tailwindcss";
+/* global.css */
 
+/* Default body styles */
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
-.layout {
-  display: flex;
-  min-height: 100vh;
+  font-family: Arial, sans-serif; 
+  background-color: #f4f4f4; 
+  color: #333; 
+  line-height: 1.6; 
 }
 
-.sidebar {
-  width: 150px;
-  background-color: #1e293b;
-  color: white;
-  padding: 16px;
-  top:50px;
-}
-
-main {
-  flex: 1;
-  padding: 24px;
-}
