--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -25,7 +25,7 @@
   gap:10px;
 }
 .sidebar-link:hover {
-  background-color: rgb(92, 92, 244);
+  background-color: #4caf50;
   color:#f4f4f4;
 }
 .sidebar-icon {
@@ -54,7 +54,7 @@
 
 .sidebar-sublink:hover {
   color: #f4f4f4;;
-  background-color:rgb(92, 92, 244);
+  background-color:#4caf50;
 }
 /* Topnav */
 .topnav {
@@ -88,7 +88,7 @@
 }
 
 .nav-links a:hover {
-  color: #bfa181;
+  color: #4caf50;
   text-decoration: underline;
 }
 
