--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -17,11 +17,11 @@
   display: flex;
   align-items:start;
   color: #f5f5f5;
-  padding:8px;
+  padding:6px;
   font-size: 16px;
   text-decoration: none;
   margin-top: -16px;
-  width: 100%;
+  width: 86%;
   gap:10px;
 }
 .sidebar-link:hover {
@@ -49,7 +49,7 @@
   text-decoration: none;
   color: #888;
   transition: color 0.2s, background 0.2s;
-  width: 100%;
+  width:86%;
 }
 
 .sidebar-sublink:hover {
@@ -127,7 +127,7 @@
 }
 
 .user-icon:hover {
-  background: #bfa181;
+  background: #4caf50;
   color: #1c1c1e;
 }
 
