--- a/src/app/Styles/AddNewPost.css
+++ b/src/app/Styles/AddNewPost.css
@@ -9,7 +9,9 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
 }
-
+.post-form-container{
+  margin-left:115px;
+}
 .addposttitle{
   margin-top: -13px;
   font-weight: 500;
