--- a/src/app/Styles/Sidebar.css
+++ b/src/app/Styles/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
   width: 130px;
   height: 100vh;
-  background-color: #2a2a2d; 
+  background-color: #131D4F; 
   display: flex;
   flex-direction: column;
   align-items:start;
@@ -25,9 +25,13 @@
   gap:10px;
 }
 .sidebar-link:hover {
-  background-color: #4caf50;
-  color:#f4f4f4;
+  color: #333;
+  background-color: #EFE4D2;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  transform: translateX(4px);
+  border-radius: 8px; 
 }
+
 .sidebar-icon {
   font-size: 1rem;
   flex-shrink: 0;
@@ -51,16 +55,18 @@
   transition: color 0.2s, background 0.2s;
   width:86%;
 }
-
 .sidebar-sublink:hover {
-  color: #f4f4f4;;
-  background-color:#4caf50;
+  color: #333;
+  background-color: #EFE4D2;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  transform: translateX(4px);
+  border-radius: 8px; /* 👈 Rounded corners */
 }
 /* Topnav */
 .topnav {
   height: 50px;
   width: 100%;
-  background-color: #2a2a2d; 
+  background-color: #4DA8DA; 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -71,7 +77,7 @@
   left: 0;
   z-index: 999;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-  color: #f5f5f5;
+  color:#333;
 }
 
 .nav-links {
@@ -81,14 +87,14 @@
 }
 
 .nav-links a {
-  color: #f5f5f5;
+  color: #333;
   text-decoration: none;
   font-weight: 500;
   transition: color 0.3s ease;
 }
 
 .nav-links a:hover {
-  color: #4caf50;
+  color: #EFE4D2;
   text-decoration: underline;
 }
 
@@ -102,24 +108,25 @@
   font-size: 18px;
   font-weight: 700;
   white-space: nowrap;
-  margin-left:-55%;
+  margin-left: -50%;
 }
 
 .datetime .day {
-  color:green;
+  color: #8E44AD;  /* Deep Purple */
 }
 
 .datetime .date {
-  color:red;
+  color: #D35400;  /* Rich Orange */
 }
 
 .datetime .time {
-  color: blue; 
+  color: #2980B9;  /* Bold Blue */
 }
+
 .user-icon {
   color: #f5f5f5;
   font-size: 30px;
-  background: #3a3a3d;
+  background: #4DA8DA;
   padding: 6px;
   border-radius: 50%;
   cursor: pointer;
@@ -128,7 +135,7 @@
 
 .user-icon:hover {
   background: #4caf50;
-  color: #1c1c1e;
+  color: #4DA8DA;
 }
 
 .nav-left {
